2.0.0 (2022-09-03)

 * Added an optional X11 user interface

 * Implemented mouse drags on the elapsed time gauge and the scrollbar

 * Added Tab and S-Tab bindings to iterate tabs

 * Added a "z" binding to center the view on the selected item

 * Added a "?" binding to describe items in various tabs

 * Made it possible to adjust the spectrum analyzer's FPS limit

 * Moved "Disconnected" and "Connecting..." messages to the status bar

 * Fixed possibility of connection timeouts with PulseAudio integration


1.2.0 (2021-12-21)

 * Added ability to control the volume of MPD's current PulseAudio sink

 * Now fetching Internet stream information asynchronously

 * Added basic incremental search, normally bound to C-s, in all tabs

 * Fixed jumping to the beginning of the queue after deleting items


1.1.1 (2021-11-04)

 * Terminal focus in/out events no longer ring the terminall bell

 * Made mouse work in non-rxvt terminals with recent xterm terminfo


1.1.0 (2021-10-21)

 * Now requesting and processing terminal de/focus events,
   using a new "defocused" attribute for selected rows

 * Made it possible to show a spectrum visualiser when built against FFTW

 * Any program arguments are now added to MPD's current playlist


1.0.0 (2020-11-05)

 * Coming with a real manual page instead of a help2man-generated stub

 * Added a mode to poll MPD for the elapsed time, enabled by default,
   fixing two cases of improper tracking

 * Started showing song duration in the library

 * Added C-PgUp/PgDown and C-Left/Right bindings to iterate tabs

 * Added VIM-like C-y and C-e bindings for scrolling

 * Added Windows Explorer-like M-Up binding to go up a directory

 * Worked around a cURL bug crashing the application

 * Fixed handling of direct SHOUTcast streams

 * Miscellaneous little fixes


0.9.0 (2018-11-02)

 * Initial release
